--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,5 +5,8 @@
 @import "mixins/vendor_prefix";
 @import "modules/side_bar";
 @import "modules/chat";
-@import "messages/messages.scss";
+@import "modules/user";
 @import "font-awesome";
+@import "messages/messages.scss";
+@import "config/colors";
+@import "modules/flash";
