--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,8 @@
 @import "modules/side_bar";
 @import "modules/chat";
 @import "font-awesome";
+@import "modules/group";
 @import "messages/messages.scss";
 @import "config/colors";
 @import "modules/flash";
+@import "modules/user.scss";
