--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,7 +1,7 @@
 .wrapper
 
   = render 'shared/side_bar'
-
+  
   .chat
     .header
       .left-header
@@ -20,24 +20,14 @@
         .right-header__button
           Edit
     .messages
-      - 10.times do
-        .message
-          .upper-message
-            .upper-message__user-name
-              メンバー
-            .upper-message__date
-              2017/04/04
-          .lower-meesage
-            .lower-message__content
-              メッセージ
+      = render partial: 'message', collection: @messages
       
             
     .form
-      %form
-        %input.form__message{:name => "message[content]", :placeholder => "type a message", :type => "text"}/
+      = form_for [@group, @message] do |f|
+        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
         .form__mask
-          %label.form__mask__image{:for => "message_image"}
+          = f.label :image, class: 'form__mask__image' do
             = fa_icon 'picture-o', class: 'icon'
-            %input.hidden{type: 'file', placeholder:"type a message"}
-            
-        %input.form__submit{type: 'submit', value: 'Send'}
+            = f.file_field :image, class: 'hidden'
+        = f.submit 'Send', class: 'form__submit'
