--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -12,7 +12,7 @@
       = f.text_field :name, class: 'chat__group_name chat-group-form__input', placeholder: 'グループ名を入力してください'
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
-      %label.chat-group-form__label{for:"chat_group_チャットメンバーを追加"} チャットメンバーを追加
+      %label.chat-group-form__label{for: "chat_group_チャットメンバーを追加"} チャットメンバーを追加
     .chat-group-form__field--right
       .chat-group-form__search.clearfix
         %input#user-search-field.chat-group-form__input{placeholder: "追加したいユーザー名を入力してください", type: "text"}/
@@ -24,12 +24,12 @@
     .chat-group-form__field--right
 
       #chat-group-users.js-add-user
-        .chat-group-user.clearfix.js-chat-member#chat-group-user-8
+        .chat-group-user.clearfix.js-chat-member
           %input{name: "group[user_ids][]", type: "hidden", value: current_user.id}
           %p.chat-group-user__name= current_user.name
-        
+
         - group.users.each do |user|
-          - if current_user.name != user.name
+          - if current_user.id != user.id
             .chat-group-user.clearfix.js-chat-member
               %input{name: "group[user_ids][]", type: "hidden", value: user.id}
               %p.chat-group-user__name
