--- a/app/assets/stylesheets/modules/side_bar.scss
+++ b/app/assets/stylesheets/modules/side_bar.scss
@@ -46,6 +46,9 @@
         font-size: $side_group_message;
         margin-top: 5px;
       }
+      .link{
+        text-decoration-line:none;
+      }
     }
   }
 }
