--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -16,7 +16,7 @@
           
       .right-header
         .right-header__button
-          = link_to "Edit", edit_group_path(@group)
+          = link_to "Edit", edit_group_path(@group), class:"edit"
     .messages
       = render partial: 'message', collection: @messages
       
