--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -39,7 +39,7 @@
     .messages {
       background-color: #FAFAFA;
       box-sizing: border-box;
-      padding: 46px 40px 0;
+      padding: 40px 40px 0;
       height: calc(100vh - 190px);
       overflow: auto;
       .message {
@@ -61,6 +61,11 @@
           &__content {
             color: #434a54;
             font-size: 14px;
+            margin-bottom: 40px;
+          }
+          &__image {
+            height: 400px;
+            width: 400px;
             margin-bottom: 40px;
           }
         }
