--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -63,7 +63,11 @@
             font-size: 14px;
             margin-bottom: 40px;
           }
-          
+          &__image {
+            height: 400px;
+            width: 400px;
+            margin-bottom: 40px;
+          }
         }
       }
     }
