--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -16,6 +16,7 @@
     .chat-group-form__field--right
       .chat-group-form__search.clearfix
         %input#user-search-field.chat-group-form__input{placeholder: "追加したいユーザー名を入力してください", type: "text"}/
+        -# ここの記述からuser.jsのイベントが発火していく
       #user-search-result
 
   .chat-group-form__field.clearfix
@@ -41,3 +42,6 @@
     .chat-group-form__field--left
     .chat-group-form__field--right
       = f.submit class: 'chat-group-form__action-btn'
+
+
+
