--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -17,3 +17,6 @@
             = group.name
           .group__message
             = group.show_last_message
+            -# ここのshow_last_messageはgroup.rbでメソッドとして定義しているので使える
+
+
